plugins {
    // IDE plugins
    id 'idea'
    id 'eclipse'

    // Gradle java-library plugin
    id 'java-library'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

group = 'de.hhu.bsinfo'
version = '1.0.0' + (Boolean.valueOf(System.getProperty('release')) ? '' : '-SNAPSHOT')

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs += ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

test {
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.math=ALL-UNNAMED',
            '--add-opens', 'java.base/java.time=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    testImplementation 'org.hamcrest:hamcrest-core:2.1'
    testImplementation 'junit:junit:4.12'
}
